# Cerenkov-radiation-detector-GasTOF---Geant4

./: .gitignore  GasTOF_README.md  README.md
program_glowny/: CMakeLists.txt  program_glowny.cc
program_glowny/.qt/: QtDeploySupport.cmake
program_glowny/include/: MyAnalysis.hh  MyDetectorConstruction.hh  MyPhotonHit.hh  MyPhotonSD.hh  MyPhysicsList.hh  MyPrimaryGeneratorAction.hh  MyRun.hh  MyRunAction.hh
program_glowny/src/: MyDetectorConstruction.cc  MyPhotonHit.cc  MyPhotonSD.cc  MyPhysicsList.cc  MyPrimaryGeneratorAction.cc  MyRun.cc  MyRunAction.cc
